# c-data-structures

./: .gitignore  CMakeLists.txt  README.md  _build.sh  _make.sh  main.c  makefile  run.sh
assignments/assignment1/: main.c  seno.txt  trigo.txt
assignments/assignment2/: input.txt  main.c
assignments/assignment3/: main.c
assignments/assignment4/: buffercirc.c
exercises/: bhaskara.c  cannonball.c  cel2fahr.c
misc/: bhaskara.c  cannonball.c  cel2fahr.c  det3x3.c
src/: array.c  array.h  linkedList.c  linkedList.h  node.c  node.h  recursives.c  recursives.h  sort.c  sort.h  stack.c  stack.h  strings.c  strings.h
